--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,3 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+/* font-family: 'Poppins', sans-serif; */
+
+
+body {
+    font-family: 'Poppins', sans-serif;
+    color: #000;
+}
+
+.container {
+    max-width: 1230px;
+    padding: 0 30px;
+    margin: 0 auto;
+}
+
+.title-1{
+    font-size: 34px;
+    font-weight: 600;
+}
+
 /* Reset and base styles  */
 * {
 	padding: 0px;
